# eventsource-broker

./: .gitignore  Makefile  README.md  eventsource-broker.cabal
coffeescripts/: eshq.coffee  iframe.coffee
config/: app.cfg  deploy.rb
src/: AMQPEvents.hs  DB.hs  EventStream.hs  Main.hs
src/Models/: Broker.hs  Channel.hs  Connection.hs  Event.hs  Stats.hs  User.hs
static/: eshq.js  iframe.html  iframe.js
templates/: eshq.js.st
