Name:                eventsource-broker
Version:             0.9
Synopsis:            EventSource Broker
Description:         Bridges EventSource and AMQP
License:             AllRightsReserved
Author:              Mathias Biilmann Christensen
Maintainer:          info@mathias-biilmann.net
Stability:           Alpha
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable eventsource-broker
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4.3 && < 5,
    safe >= 0.3,
    bytestring >= 0.9.1 && < 0.10,
    blaze-builder >= 0.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap-core == 0.9.*,
    snap-server == 0.9.*,
    enumerator == 0.4.*,
    MissingH == 1.1.*,
    unix == 2.5.*,
    uri == 0.1.*,
    amqp == 0.3.*,
    aeson == 0.3.*,
    attoparsec >= 0.9.0,
    system-uuid == 2.1.*,
    HStringTemplate == 0.6.*,
    text >= 0.11.2.0,
    hashmap >= 1.2,
    bson >= 0.2.0,
    mongoDB >= 1.3.0,
    time >= 1.4,
    SHA == 1.5.*,
    random >= 1.0.1.1,
    configurator >= 0.2.0.0

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -rtsopts
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
